# xrwvm-fullstack_developer_capstone

./: .gitignore  README.md
.github/workflows/: main.yaml
server/: pyproject.toml
server/carsInventory/: package-lock.json  package.json
server/database/: .jshintrc  app.js
server/djangoapp/: admin.py  models.py  populate.py  restapis.py  urls.py  views.py
server/djangoproj/: settings.py  urls.py
server/frontend/src/: App.js
server/frontend/src/components/Dealers/: Dealer.jsx  Dealers.css  Dealers.jsx  SearchCars.jsx
server/frontend/src/components/Register/: Register.jsx
server/frontend/static/: About.html  Contact.html  Home.html  style.css
